# AIDecoGD

./: .gitignore  CMakeLists.txt  README.md  aid_deco_test  engine_test  mod.json
.github/workflows/: ci.yml  windows_release_build.yml  windows_release_publish.yml
AI_Deco/Presets/: default.json  unit_test_preset.json
include/: AIDeco.hpp  EditorIntegration.hpp
src/: main.cpp
src/engine/: AIDecoEngine.cpp  AIDecoEngine.hpp  DetailProfiles.cpp  DetailProfiles.hpp  Themes.cpp  Themes.hpp
src/hooks/: EditorHook.cpp  EditorHook_geode.cpp  EditorIntegration.cpp  GeodeStubs.hpp
src/presets/: AIDecoPreset_json.cpp  PresetManager.cpp
src/tests/: engine_test.cpp  preset_test.cpp
src/ui/: AIDecoButton.cpp  AIDecoButton_geode.cpp  AIDecoPanel.cpp  AIDecoPanel_geode.cpp  PresetTab.cpp
tools/: build_geode_win.ps1  build_release_win.ps1  fetch_geode.sh  make_geode.sh  package_mod.sh  prepare_game_headers.sh
